# SOL-Lite

./: .gitignore  DISAGREEMENTS.md  README.md  ROOFLINE_ANALYSIS.md  baseline_roofline.csv  baseline_roofline.md  pyproject.toml  roofline_summary.csv  roofline_summary.md
data/benchmark/Contest/FlashInfer-Bench/002_fused_add_rmsnorm_h4096/: definition.json  reference.py  workload.jsonl
data/benchmark/Contest/FlashInfer-Bench/003_fused_add_rmsnorm_h7168/: definition.json  reference.py  workload.jsonl
data/benchmark/Contest/FlashInfer-Bench/005_gemm_n256_k7168/: definition.json  reference.py  solution.json  solution.py  workload.jsonl
data/benchmark/Contest/FlashInfer-Bench/013_gqa_paged_decode_h32_kv8_d128_ps1/: definition.json  reference.py  workload.jsonl
data/benchmark/Contest/FlashInfer-Bench/017_gqa_ragged_prefill_causal_h32_kv8_d128/: definition.json  reference.py  workload.jsonl
data/benchmark/Contest/FlashInfer-Bench/018_mla_paged_decode_h16_ckv512_kpe64_ps1/: definition.json  reference.py  workload.jsonl
data/benchmark/Contest/L1/069_rms_norm/: definition.json  (+2 more)
data/benchmark/problem-lists/: Contest.txt
data/costs/: ray234_h800.jsonl
scripts/: _costs.py  _hardware.py  bench_baselines.py  diagnose_ray234.py  download_flashinfer_traces.py  roofline_analyze.py  roofline_bench.py  roofline_l2.py  roofline_measure.py  roofline_moe.py  roofline_summary.py  roofline_tier1_batch.py  run_contest.py  run_dataset.py  survey_problems.py
scripts/harness/: __init__.py  correctness.py  inputs.py  loader.py  memory_pool.py  runner.py  timing.py  traces.py
(+333 files in other folders)
