[project]
name = "sol-lite"
version = "0.1.0"
description = "60-problem SOL-ExecBench Contest subset with H800 roofline analysis"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
]

[project.optional-dependencies]
# Required only for the standalone timing engine (scripts/roofline_bench.py).
# Install with:  uv sync --extra bench
bench = [
  "torch>=2.0",
]

[tool.uv]
package = false
